# flask-app

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py
app/ext/admin/: __init__.py
app/ext/config/: __init__.py
app/ext/site/: main.py
app/templates/: base.html  index.html  sobre.html
