[tool.poetry]
name = "app"
version = "0.1.0"
description = "flask app example"
authors = ["Gabriel Barbosa <gabrielmello808@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
black = "^21.9b0"
flake8 = "^3.9.2"
ipdb = "^0.13.9"
gunicorn = "^20.1.0"
ipython = "^7.27.0"
isort = "^5.9.3"
Flask-Admin = "^1.5.8"
Flask-DebugToolbar = "^0.11.0"
joe = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
